--- a/_temp_extension/package.json
+++ b/_temp_extension/package.json
@@ -1,53 +1,51 @@
 {
   "name": "jupyterlab-clipboard-image",
-  "version": "0.0.2",
-  "description": "\u7eee\u6a3f\u521b\u9365\u5267\u5896",
+  "version": "0.1.0",
+  "description": "粘贴图片",
   "keywords": [
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "homepage": "https://github.com/liushilive/jupyterlab-clipboard-image",
+  "homepage": "https://github.com/liushilive/jupyterlab-clipboard-image.git",
   "bugs": {
-    "url": "https://github.com/liushilive/jupyterlab-clipboard-image/issues"
+    "url": "https://github.com/liushilive/jupyterlab-clipboard-image.git/issues"
   },
   "license": "BSD-3-Clause",
-  "author": "liushilive",
-  "contributors": [
-    "\u9352\u6a3a\uff0b <liushilive@outlook.com>"
-  ],
+  "author": {
+    "name": "liushilive",
+    "email": "liushilive@outlook.com"
+  },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
-    "style/index.js"
+    "style/**/*.{css,.js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "style": "style/index.css",
   "repository": {
     "type": "git",
-    "url": "https://github.com/liushilive/jupyterlab-clipboard-image.git"
+    "url": "https://github.com/liushilive/jupyterlab-clipboard-image.git.git"
   },
   "scripts": {
     "build": "jlpm run build:lib && jlpm run build:labextension:dev",
+    "build:prod": "jlpm run clean && jlpm run build:lib && jlpm run build:labextension",
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
     "build:lib": "tsc",
-    "build:prod": "jlpm run clean && jlpm run build:lib && jlpm run build:labextension",
     "clean": "jlpm run clean:lib",
-    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
-    "clean:labextension": "rimraf jupyterlab-clipboard-image/labextension",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
+    "clean:labextension": "rimraf jupyterlab-clipboard-image/labextension",
+    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
     "eslint": "eslint . --ext .ts,.tsx --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
     "install:extension": "jlpm run build",
-    "prepublishOnly": "yarn clean && yarn build",
     "watch": "run-p watch:src watch:labextension",
-    "watch:labextension": "jupyter labextension watch .",
-    "watch:src": "tsc -w"
+    "watch:src": "tsc -w",
+    "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.0.9",
-    "@jupyterlab/notebook": "^3.0.9"
+    "@jupyterlab/application": "^3.0.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
@@ -55,15 +53,19 @@
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.1.4", 
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "typescript": "~4.1.3"
   },
-  "jupyterlab": {
+  "sideEffects": [
+    "style/*.css",
+    "style/index.js"
+  ],
+  "styleModule": "style/index.js",
+  "jupyterlab": { 
     "extension": true,
     "outputDir": "jupyterlab-clipboard-image/labextension"
-  },
-  "styleModule": "style/index.js"
+  }
 }
