--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,22 @@
 {
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "composite": true,
         "declaration": true,
-        "noImplicitAny": true,
-        "noEmitOnError": true,
-        "noUnusedLocals": true,
+        "esModuleInterop": true,
+        "incremental": true,
+        "jsx": "react",
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "ES5",
+        "noEmitOnError": true,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "preserveWatchOutput": true,
+        "resolveJsonModule": true,
+        "rootDir": "src",
+        "strict": true,
+        "strictNullChecks": false,
+        "target": "es2017",
         "outDir": "./lib",
         "lib": [
             "es6",
